2001-02-21  Fernando Nasser  <fnasser@redhat.com>

	* TODO: New file.  Initial version of the TODO file, as posted to the
	insight list circa October 2000.

2001-02-14  Fernando Nasser  <fnasser@redhat.com>

	From 2001-02-09  Martin Hunt  <hunt@redhat.com>
	* generic/gdbtk-cmds.c (gdb_load_disassembly): In mixed
	mode, source lines should be tagged with source_tag2.

2001-02-08  Fernando Nasser  <fnasser@redhat.com>

	From 2001-02-06  Martin Hunt  <hunt@redhat.com>
	* library/debugwin.itb: Change window name to "Insight Debug"
	* library/embeddedwin.ith: Fix debug messages.
	* library/locals.tcl: Ditto.
	* library/watch.tcl (postMenu): Ditto.
	* library/variables.tcl: Ditto.
	* library/interface.tcl: Ditto.
	* library/regwin.itb: Ditto.
	* library/gdbwin.ith: Ditto.
	* library/srcbar.itcl: Ditto.

2001-02-06  Fernando Nasser  <fnasser@redhat.com>

	Originally from Martin Hunt <hunt@redhat.com>, with modifications
	* library/srcwin.itb (_name): Check for errors when invoking
	gdb_find_file.
	* library/srctextwin.itb (_mtime_changed, location): Ditto.
	* generic/gdbtk-cmds.c (gdb_find_file_command): Better error checking.
	(full_lookup_symtab): Fix misleading comment.

2001-02-04  Fernando Nasser  <fnasser@redhat.com>

	* library/plugins/plugins.tcl: Fix typos and remove "-transient"
	parameter from open command.
	* library/plugins/HOW-TO: New file.  Describes how to add a plug-in
	window to Insight.

2001-02-01  Fernando Nasser  <fnasser@redhat.com>

	* library/images/insight.gif: New splash screen/about graphics.
	* library/images2/insight.gif: New splash screen/about graphics.
	* library/about.tcl: Update copyright, window title and change colors
	to match new splash screen/about images.

2001-02-01  Fernando Nasser  <fnasser@redhat.com>

	* library/gdbtoolbar.itcl (add): New method.  Emulate the style of the
	toolbar iwidget commands.
	(toolbar_show): Old name.
        (show): New name.
	(toolbar_create_button): Old name.
        (create): New name.