@@ -1,3 +1,9 @@
+2001-02-27  Keith Seitz  <kseitz@nwlink.com>
+
+	* generic/gdbtk-cmds.c (gdb_fetch_registers): Mark
+	the result as generating a list only if it really does
+	generate a list.
+
 2001-02-21  Fernando Nasser  <fnasser@redhat.com>
 
 	* TODO: New file.  Initial version of the TODO file, as posted to the
